# CalculatorApp

./: .gitignore  CMakeLists.txt  main.cpp  setup.sh
CalculatorAppLCM/: CMakeLists.txt
CalculatorAppLCM/client/: CMakeLists.txt  erro  main.cpp
CalculatorAppLCM/client/LCM/: client.cpp  client.hpp
CalculatorAppLCM/client/UI/: MainWindow.cpp  MainWindow.h  Untitled-1.cpp
CalculatorAppLCM/messages/: Operation.lcm  Result.lcm
CalculatorAppLCM/messages/messages/: Operation.hpp  Result.hpp
CalculatorAppLCM/server/: CMakeLists.txt
CalculatorAppLCM/server/LCM/: server.cpp
Logic/: Calculator.cpp  Calculator.h
Model/: Operation.h
Persistence/: Database.cpp  Database.h
UI/: MainWindow.cpp  MainWindow.h
